--- a/package.json
+++ b/package.json
@@ -1,20 +1,29 @@
 {
   "name": "adshield-defuser",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "AdShield Defuser is a library that decodes AdShield inlined payloads to restore components.",
   "main": "out/index.js",
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ava"
   },
   "keywords": [],
   "author": "HoJeong Go <seia@outlook.kr>",
   "license": "MIT",
+  "ava": {
+    "extensions": {
+      "ts": "module"
+    },
+    "nodeArguments": [
+      "--loader=ts-node/esm"
+    ]
+  },
   "devDependencies": {
     "@types/node": "^18.15.0",
     "@typescript-eslint/eslint-plugin": ">=5.43.0",
     "@typescript-eslint/parser": ">=5.43.0",
+    "ava": "^5.2.0",
     "eslint": ">=8.0.0",
     "eslint-config-xo": "^0.43.1",
     "eslint-config-xo-typescript": "^0.56.0",
