--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "out/index.js",
   "type": "module",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -p tsconfig.build.json",
     "test": "ava"
   },
   "keywords": [],
