--- a/package.json
+++ b/package.json
@@ -20,19 +20,19 @@
     ]
   },
   "devDependencies": {
-    "@types/node": "^18.15.0",
-    "@typescript-eslint/eslint-plugin": ">=5.43.0",
-    "@typescript-eslint/parser": ">=5.43.0",
+    "@types/node": "^18.16.3",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
     "ava": "^5.2.0",
-    "eslint": ">=8.0.0",
+    "eslint": "^8.39.0",
     "eslint-config-xo": "^0.43.1",
     "eslint-config-xo-typescript": "^0.56.0",
     "serve": "^14.2.0",
     "ts-node": "^10.9.1",
-    "typescript": ">=4.4"
+    "typescript": "^5.0.4"
   },
   "dependencies": {
     "buffertly": "^1.2.0",
-    "protobufjs": "^7.2.2"
+    "protobufjs": "^7.2.3"
   }
 }
