--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "AdShield Defuser is a library that decodes AdShield inlined payloads to restore components.",
   "main": "out/index.js",
   "type": "module",
+  "engines": {
+    "node": ">=20.6.0"
+  },
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
-    "test": "ava"
+    "test": "NODE_OPTIONS='--import=tsx --no-warnings' ava"
   },
   "keywords": [],
   "author": "HoJeong Go <seia@outlook.kr>",
@@ -15,9 +18,7 @@
     "extensions": {
       "ts": "module"
     },
-    "nodeArguments": [
-      "--loader=ts-node/esm"
-    ]
+    "workerThreads": false
   },
   "devDependencies": {
     "@types/node": "^18.16.3",
@@ -28,7 +29,7 @@
     "eslint-config-xo": "^0.43.1",
     "eslint-config-xo-typescript": "^0.56.0",
     "serve": "^14.2.0",
-    "ts-node": "^10.9.1",
+    "tsx": "^4.2.0",
     "typescript": "^5.0.4"
   },
   "dependencies": {
