--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "adshield-defuser",
-  "version": "0.0.12",
+  "version": "0.0.13",
   "description": "AdShield Defuser is a library that decodes AdShield inlined payloads to restore components.",
   "main": "out/index.js",
   "type": "module",
@@ -24,10 +24,13 @@
     "@types/node": "^18.16.3",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
+    "acorn": "^8.11.2",
+    "acorn-walk": "^8.3.0",
     "ava": "^5.2.0",
     "eslint": "^8.39.0",
     "eslint-config-xo": "^0.43.1",
     "eslint-config-xo-typescript": "^0.56.0",
+    "playwright": "^1.40.0",
     "serve": "^14.2.0",
     "tsx": "^4.2.0",
     "typescript": "^5.0.4"
